# dkn-compute-node

./: .gitignore  Cargo.toml  Makefile  README.md  compose.metrics.yml  metadata.json
src/: lib.rs  main.rs  node.rs
src/p2p/: available_nodes.rs  client.rs  mod.rs
src/utils/: metrics.rs  mod.rs
start/: go.mod  makefile  start.go
